# osv

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  smoketest.sh
.github/workflows/: audit.yml  devskim.yml  rust.yml  sast.yml  scorecard.yml  semgrep.yml
examples/: commit.rs  fetch.rs  load_dir.rs  load_file.rs  package.rs  parse.rs  vulnerability.rs
src/: client.rs  data.rs  lib.rs  local.rs  schema.rs
tests/: smoketest.sh
tests/osv-fuzz/: Cargo.toml
tests/osv-fuzz/fuzz_targets/: osv-fuzz.rs
