[package]
name = "osv"
version = "0.1.4"
edition = "2021"
authors = ["Grant Murphy <gcmurphy@pm.me>"]
repository = "https://github.com/gcmurphy/osv"
documentation = "https://docs.rs/osv" 
description = "Rust client library for the osv API"
readme = "README.md"
license = "Apache-2.0"
keywords = ["vulnerabilities", "security", "osv"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"], optional = true }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surf = { version = "2.3.2", optional = true }
thiserror = { version = "1.0", optional = true }
url = { version = "2.3.1", optional = true }

[dev-dependencies]
comfy-table = "5.0.1"
textwrap = { version = "0.15.0", features = ["default", "terminal_size"] }

[features]
default = ["schema"]
schema = []
client = ["dep:async-std", "dep:surf", "dep:url", "dep:thiserror", "schema"]
search = []

[[example]]
name = "commit"
path = "examples/commit.rs"
required-features = ["client"]

[[example]]
name = "package"
path = "examples/package.rs"
required-features = ["client"]

[[example]]
name = "parse"
path = "examples/parse.rs"
required-features = ["client"]

[[example]]
name = "vulnerability"
path = "examples/vulnerability.rs"
required-features = ["client"]
