[package]
name = "osv"
version = "0.2.0"
edition = "2021"
authors = ["Grant Murphy <gcmurphy@pm.me>"]
repository = "https://github.com/gcmurphy/osv"
documentation = "https://docs.rs/osv" 
description = "Rust library for parsing the OSV schema and client API"
readme = "README.md"
license = "Apache-2.0"
keywords = ["vulnerabilities", "security", "osv"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
thiserror = { version = "2.0", optional = true }
url = { version = "2.3.1", optional = true }

[dev-dependencies]
comfy-table = "7.1.1"
cargo-audit = "0.20.0"
cargo-fuzz = "0.12.0"
cargo-release = "0.25.10"
textwrap = { version = "0.16.1", features = ["default", "terminal_size"] }
tokio-test = "0.4.3"
cargo-sbom = "0.9.1"

[features]
default = ["schema"]
schema = []
client = ["dep:tokio", "dep:reqwest", "dep:url", "dep:thiserror", "schema"]

[[example]]
name = "commit"
path = "examples/commit.rs"
required-features = ["client"]

[[example]]
name = "package"
path = "examples/package.rs"
required-features = ["client"]

[[example]]
name = "parse"
path = "examples/parse.rs"
required-features = ["client"]

[[example]]
name = "vulnerability"
path = "examples/vulnerability.rs"
required-features = ["client"]
