[package]
name = "osv-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.osv]
path = "../../"

[[bin]]
name = "osv-fuzz"
path = "fuzz_targets/osv-fuzz.rs"
test = false
doc = false
bench = false
